--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,23 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "pt_retro/wsgi.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "15mb",
-        "buildCommand": "python manage.py collectstatic --noinput"
+        "maxLambdaSize": "15mb"
       }
+    },
+    {
+      "src": "portfolio/static/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "portfolio/static/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "pt_retro/wsgi.py"
