--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-﻿asgiref==3.11.1
-Django==6.0.2
-sqlparse==0.5.5
-tzdata==2025.3
-whitenoise==6.11.0
+Django==4.2.7
+whitenoise==6.6.0
+gunicorn==21.2.0
