--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "src": "pt_retro/wsgi.py",
       "use": "@vercel/python",
       "config": {
-        "maxLambdaSize": "15mb"
+        "maxLambdaSize": "15mb",
+        "buildCommand": "pip install -r requirements.txt && python manage.py collectstatic --noinput"
       }
     },
     {
